# podder-task-base

./: .gitignore  Dockerfile  docker-compose.yaml  podder.yaml  pyproject.toml
.circleci/: config.yml
config/task_name/: interface.json  model.json
processes/task_name/: process.py
tests/: test_podder_task_base.py
