[tool.poetry]
name = "podder-task-base"
version = "0.1.0"
description = ""
authors = ["Takaaki Mizuno <takaaki.mizuno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
podder-task-foundation = {git = "git@github.com:podder-ai/podder-task-foundation.git", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.6.0"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
