[tool.poetry]
name = "{{ name }}"
version = "0.0.1"
description = ""
authors = ["{{ author.name }} <{{ author.email }}>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"
podder-task-foundation = {git = "git://github.com/podder-ai/podder-task-foundation.git", rev = "0.2.10"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "^5.10.1"
yapf = "^0.31.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
