[tool.poetry]
name = "{{ name }}"
version = "0.1.0"
description = ""
authors = ["{{ author.name }} <{{ author.email }}>"]

[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"
podder-task-foundation = {git = "https://github.com/podder-ai/podder-task-foundation.git", rev = "0.2.20"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
isort = "^5.10.1"
yapf = "^0.32.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
